--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
     "google-map-react": "^2.1.9",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.16",
+    "node": "^15.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +24,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "server": "nodemon server -w ./server",
+    "postman": "nodemon postman.js -w postman.js"
   },
   "eslintConfig": {
     "extends": "react-app"
