--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-map-react": "^2.1.9",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.16",
     "node": "^15.2.1",
     "react": "^17.0.1",
@@ -25,7 +27,7 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
-    "server": "nodemon server -w ./server",
+    "server": "nodemon server/src -w ./server/src",
     "postman": "nodemon postman.js -w postman.js"
   },
   "eslintConfig": {
