--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "hospital-finder",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@craco/craco": "^5.9.0",
+    "autoprefixer": "^9",
     "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
@@ -13,11 +16,13 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.16",
     "node": "^15.2.1",
+    "postcss": "^7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "validator": "^13.1.17"
   },
   "scripts": {
