--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "google-map-react": "^2.1.9",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
