--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@craco/craco": "^5.9.0",
     "@material-ui/core": "^4.11.1",
