--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "material-ui-image": "^3.3.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.16",
     "node": "^15.2.1",
