--- a/package.json
+++ b/package.json
@@ -3,7 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5100",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "server": "nodemon server/src -w ./server/src",
+    "build-css": "tailwindcss build Recipes-tailwind/src/styles.css -o Recipes-tailwind/public/styles.css",
+    "postman": "nodemon postman.js -w postman.js"
+  },
   "dependencies": {
     "@craco/craco": "^5.9.0",
     "@material-ui/core": "^4.11.1",
@@ -23,6 +34,7 @@
     "material-ui-image": "^3.3.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.16",
+    "multer": "^1.4.2",
     "node": "^15.2.1",
     "postcss": "^7",
     "react": "^17.0.1",
@@ -33,18 +45,8 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^2.0.2",
     "validator": "^13.1.17"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
-    "server": "nodemon server/src -w ./server/src",
-    "postman": "nodemon postman.js -w postman.js"
   },
   "eslintConfig": {
     "extends": "react-app"
